# trip-planner

./: .gitignore  README.md  requirements.txt  traveltest.ipynb
app/: .env.example  .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  package.json
app/backend/: pyproject.toml
app/backend/src/safar_api/: __init__.py  config.py  main.py
app/backend/src/safar_api/api/: routes.py  serialize.py  stream.py
app/backend/src/safar_api/graph/: __init__.py  build.py
app/backend/src/safar_api/models/: __init__.py  schemas.py  state.py
app/backend/src/safar_api/nodes/: __init__.py  booking.py  faq.py  follow_up.py  follow_up_fields.py  guardrail.py  intent.py  merge_follow_up.py  modify.py  parser.py  planner.py  search.py  weather.py
app/backend/src/safar_api/services/: llm.py  resume.py  serpapi_client.py  text.py
app/backend/src/safar_api/utils/: errors.py
app/frontend/: package-lock.json  package.json  tailwind.config.ts
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/components/chat/: ChatPanel.tsx  MarkdownMessage.tsx
app/frontend/src/components/package/: TripPackageCard.tsx
app/frontend/src/components/results/: FlightsTab.tsx  HotelsTab.tsx  ItineraryTab.tsx  PackageTab.tsx  ResultsPanel.tsx
app/frontend/src/hooks/: useSafarTrip.ts
app/frontend/src/lib/: api.ts  types.ts
